--- a/BODYTECH/Domain.Test/Domain.Test.csproj
+++ b/BODYTECH/Domain.Test/Domain.Test.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PersonTest.cs" />
+    <Compile Include="RutinaTest.cs" />
     <Compile Include="TestClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
