--- a/BODYTECH/Application.Test/Application.Test.csproj
+++ b/BODYTECH/Application.Test/Application.Test.csproj
@@ -62,6 +62,7 @@
     <Compile Include="CountryServiceTest.cs" />
     <Compile Include="PersonServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RutinaServiceTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
