--- a/BODYTECH/Domain/Domain.csproj
+++ b/BODYTECH/Domain/Domain.csproj
@@ -61,12 +61,15 @@
     <Compile Include="Abstracts\IFormattedValidationException.cs" />
     <Compile Include="Abstracts\IGenericRepository.cs" />
     <Compile Include="Abstracts\IPersonRepository.cs" />
+    <Compile Include="Abstracts\IRutinaRepository.cs" />
     <Compile Include="Abstracts\IUnitOfWork.cs" />
     <Compile Include="Base\BaseEntity.cs" />
     <Compile Include="Base\IEntity.cs" />
     <Compile Include="Business\PersonBusiness.cs" />
+    <Compile Include="Business\RutinaBusiness.cs" />
     <Compile Include="Entities\Country.cs" />
     <Compile Include="Entities\Person.cs" />
+    <Compile Include="Entities\Rutina.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
