Se agrego la entidad Dias, con sus pruebas de aplicación y dominio, tambien se agregaron atributos a person los cuales hay que hacerle pruebas

--- a/BODYTECH/Application/Application.csproj
+++ b/BODYTECH/Application/Application.csproj
@@ -57,12 +57,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstracts\ICountryService.cs" />
+    <Compile Include="Abstracts\IDiasService.cs" />
     <Compile Include="Abstracts\IPersonService.cs" />
     <Compile Include="Abstracts\IRutinaService.cs" />
     <Compile Include="Base\EntityService.cs" />
     <Compile Include="Base\IEntityService.cs" />
     <Compile Include="Base\IService.cs" />
     <Compile Include="Implements\CountryService.cs" />
+    <Compile Include="Implements\DiasService.cs" />
     <Compile Include="Implements\PersonService.cs" />
     <Compile Include="Implements\RutinaService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
