--- a/BODYTECH/Domain/Domain.csproj
+++ b/BODYTECH/Domain/Domain.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstracts\ICountryRepository.cs" />
+    <Compile Include="Abstracts\IDiasRepositoty.cs" />
     <Compile Include="Abstracts\IFormattedValidationException.cs" />
     <Compile Include="Abstracts\IGenericRepository.cs" />
     <Compile Include="Abstracts\IPersonRepository.cs" />
@@ -65,9 +66,11 @@
     <Compile Include="Abstracts\IUnitOfWork.cs" />
     <Compile Include="Base\BaseEntity.cs" />
     <Compile Include="Base\IEntity.cs" />
+    <Compile Include="Business\DiasBusiness.cs" />
     <Compile Include="Business\PersonBusiness.cs" />
     <Compile Include="Business\RutinaBusiness.cs" />
     <Compile Include="Entities\Country.cs" />
+    <Compile Include="Entities\Dias.cs" />
     <Compile Include="Entities\Person.cs" />
     <Compile Include="Entities\Rutina.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
