--- a/BODYTECH/Domain/Domain.csproj
+++ b/BODYTECH/Domain/Domain.csproj
@@ -66,13 +66,24 @@
     <Compile Include="Abstracts\IUnitOfWork.cs" />
     <Compile Include="Base\BaseEntity.cs" />
     <Compile Include="Base\IEntity.cs" />
+    <Compile Include="Business\ClienteBusiness.cs" />
     <Compile Include="Business\DiasBusiness.cs" />
+    <Compile Include="Business\EjercicioBusiness.cs" />
     <Compile Include="Business\PersonBusiness.cs" />
     <Compile Include="Business\RutinaBusiness.cs" />
+    <Compile Include="Business\RutinasBusiness.cs" />
+    <Compile Include="Entities\Administrador.cs" />
+    <Compile Include="Entities\Cliente.cs" />
+    <Compile Include="Entities\Cliente_Paquetes.cs" />
     <Compile Include="Entities\Country.cs" />
     <Compile Include="Entities\Dias.cs" />
+    <Compile Include="Entities\Ejercicio.cs" />
+    <Compile Include="Entities\Entrenador.cs" />
+    <Compile Include="Entities\Paquetes.cs" />
     <Compile Include="Entities\Person.cs" />
     <Compile Include="Entities\Rutina.cs" />
+    <Compile Include="Entities\Rutinas.cs" />
+    <Compile Include="Entities\Rutina_Ejercicio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
