--- a/BODYTECH/Domain.Test/Domain.Test.csproj
+++ b/BODYTECH/Domain.Test/Domain.Test.csproj
@@ -49,12 +49,17 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdministradorTest.cs" />
     <Compile Include="ClienteTest.cs" />
+    <Compile Include="Cliente_PaquetesTest.cs" />
     <Compile Include="DiasTest.cs" />
     <Compile Include="EjercicioTest.cs" />
+    <Compile Include="EntrenadorTest.cs" />
+    <Compile Include="PaquetesTest.cs" />
     <Compile Include="PersonTest.cs" />
     <Compile Include="RutinasTest.cs" />
     <Compile Include="RutinaTest.cs" />
+    <Compile Include="Rutina_EjercicioTest.cs" />
     <Compile Include="TestClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
