Pruebas de la clase ADMINISTRADOR en la capa aplicacion

--- a/BODYTECH/Application.Test/Application.Test.csproj
+++ b/BODYTECH/Application.Test/Application.Test.csproj
@@ -59,6 +59,7 @@
     <Reference Include="System.Configuration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdministradorServiceTest.cs" />
     <Compile Include="CountryServiceTest.cs" />
     <Compile Include="DiasServiceTest.cs" />
     <Compile Include="PersonServiceTest.cs" />
