--- a/BODYTECH/Application/Application.csproj
+++ b/BODYTECH/Application/Application.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstracts\IAdminstradorService.cs" />
     <Compile Include="Abstracts\ICountryService.cs" />
     <Compile Include="Abstracts\IDiasService.cs" />
     <Compile Include="Abstracts\IPersonService.cs" />
@@ -63,6 +64,7 @@
     <Compile Include="Base\EntityService.cs" />
     <Compile Include="Base\IEntityService.cs" />
     <Compile Include="Base\IService.cs" />
+    <Compile Include="Implements\AdministradorService.cs" />
     <Compile Include="Implements\CountryService.cs" />
     <Compile Include="Implements\DiasService.cs" />
     <Compile Include="Implements\PersonService.cs" />
