--- a/BODYTECH/Domain/Domain.csproj
+++ b/BODYTECH/Domain/Domain.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstracts\IAdministradorRepository.cs" />
     <Compile Include="Abstracts\ICountryRepository.cs" />
     <Compile Include="Abstracts\IDiasRepositoty.cs" />
     <Compile Include="Abstracts\IFormattedValidationException.cs" />
