Pruebas de CLIENTE en la capa de aplicacion

--- a/BODYTECH/Application.Test/Application.Test.csproj
+++ b/BODYTECH/Application.Test/Application.Test.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdministradorServiceTest.cs" />
+    <Compile Include="ClienteServiceTest.cs" />
     <Compile Include="CountryServiceTest.cs" />
     <Compile Include="DiasServiceTest.cs" />
     <Compile Include="PersonServiceTest.cs" />
