Prueba de CLIENTE_PAQUETES en la capa de aplicacion terminadas

--- a/BODYTECH/Application.Test/Application.Test.csproj
+++ b/BODYTECH/Application.Test/Application.Test.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="AdministradorServiceTest.cs" />
     <Compile Include="ClienteServiceTest.cs" />
+    <Compile Include="Cliente_PaquetesTest.cs" />
     <Compile Include="CountryServiceTest.cs" />
     <Compile Include="DiasServiceTest.cs" />
     <Compile Include="PersonServiceTest.cs" />
