--- a/BODYTECH/Domain/Domain.csproj
+++ b/BODYTECH/Domain/Domain.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="Abstracts\IAdministradorRepository.cs" />
     <Compile Include="Abstracts\IClienteRepository.cs" />
+    <Compile Include="Abstracts\ICliente_PaquetesRepository.cs" />
     <Compile Include="Abstracts\ICountryRepository.cs" />
     <Compile Include="Abstracts\IDiasRepositoty.cs" />
     <Compile Include="Abstracts\IFormattedValidationException.cs" />
