--- a/BODYTECH/Application/Application.csproj
+++ b/BODYTECH/Application/Application.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="Abstracts\IAdminstradorService.cs" />
     <Compile Include="Abstracts\IClienteService.cs" />
+    <Compile Include="Abstracts\ICliente_PaquetesService.cs" />
     <Compile Include="Abstracts\ICountryService.cs" />
     <Compile Include="Abstracts\IDiasService.cs" />
     <Compile Include="Abstracts\IPersonService.cs" />
@@ -67,6 +68,7 @@
     <Compile Include="Base\IService.cs" />
     <Compile Include="Implements\AdministradorService.cs" />
     <Compile Include="Implements\ClienteService.cs" />
+    <Compile Include="Implements\Cliente_PaquetesService.cs" />
     <Compile Include="Implements\CountryService.cs" />
     <Compile Include="Implements\DiasService.cs" />
     <Compile Include="Implements\PersonService.cs" />
