--- a/BODYTECH/Application.Test/Application.Test.csproj
+++ b/BODYTECH/Application.Test/Application.Test.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Cliente_PaquetesTest.cs" />
     <Compile Include="CountryServiceTest.cs" />
     <Compile Include="DiasServiceTest.cs" />
+    <Compile Include="EjercicioServiceTest.cs" />
     <Compile Include="PersonServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RutinaServiceTest.cs" />
