Pruebas de ENTRENADOR terminadas en la capa de aplicacion

--- a/BODYTECH/Application/Application.csproj
+++ b/BODYTECH/Application/Application.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Abstracts\ICountryService.cs" />
     <Compile Include="Abstracts\IDiasService.cs" />
     <Compile Include="Abstracts\IEjercicioService.cs" />
+    <Compile Include="Abstracts\IEntrenadorService.cs" />
     <Compile Include="Abstracts\IPersonService.cs" />
     <Compile Include="Abstracts\IRutinaService.cs" />
     <Compile Include="Base\EntityService.cs" />
@@ -73,6 +74,7 @@
     <Compile Include="Implements\CountryService.cs" />
     <Compile Include="Implements\DiasService.cs" />
     <Compile Include="Implements\EjercicioService.cs" />
+    <Compile Include="Implements\EntrenadorService.cs" />
     <Compile Include="Implements\PersonService.cs" />
     <Compile Include="Implements\RutinaService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
