--- a/BODYTECH/Application.Test/Application.Test.csproj
+++ b/BODYTECH/Application.Test/Application.Test.csproj
@@ -65,6 +65,7 @@
     <Compile Include="CountryServiceTest.cs" />
     <Compile Include="DiasServiceTest.cs" />
     <Compile Include="EjercicioServiceTest.cs" />
+    <Compile Include="EntrenadorServiceTest.cs" />
     <Compile Include="PersonServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RutinaServiceTest.cs" />
