--- a/BODYTECH/Application/Application.csproj
+++ b/BODYTECH/Application/Application.csproj
@@ -63,8 +63,11 @@
     <Compile Include="Abstracts\IDiasService.cs" />
     <Compile Include="Abstracts\IEjercicioService.cs" />
     <Compile Include="Abstracts\IEntrenadorService.cs" />
+    <Compile Include="Abstracts\IPaquetesService.cs" />
     <Compile Include="Abstracts\IPersonService.cs" />
     <Compile Include="Abstracts\IRutinaService.cs" />
+    <Compile Include="Abstracts\IRutinasService.cs" />
+    <Compile Include="Abstracts\IRutina_EjercicioService.cs" />
     <Compile Include="Base\EntityService.cs" />
     <Compile Include="Base\IEntityService.cs" />
     <Compile Include="Base\IService.cs" />
@@ -75,8 +78,11 @@
     <Compile Include="Implements\DiasService.cs" />
     <Compile Include="Implements\EjercicioService.cs" />
     <Compile Include="Implements\EntrenadorService.cs" />
+    <Compile Include="Implements\PaquetesService.cs" />
     <Compile Include="Implements\PersonService.cs" />
     <Compile Include="Implements\RutinaService.cs" />
+    <Compile Include="Implements\RutinasService.cs" />
+    <Compile Include="Implements\Rutina_EjercicioService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
