--- a/BODYTECH/Infraestructure.Data.Test/Infraestructure.Data.Test.csproj
+++ b/BODYTECH/Infraestructure.Data.Test/Infraestructure.Data.Test.csproj
@@ -62,6 +62,8 @@
   <ItemGroup>
     <Compile Include="CountryRepositoryTest.cs" />
     <Compile Include="CountryRepositoryTestWithDB.cs" />
+    <Compile Include="PaquetesRepositoryTest.cs" />
+    <Compile Include="PersonRepositoryTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SampleArchContextTest.cs" />
   </ItemGroup>
