--- a/BODYTECH/Infraestructure.Data/Infraestructure.Data.csproj
+++ b/BODYTECH/Infraestructure.Data/Infraestructure.Data.csproj
@@ -62,6 +62,8 @@
     <Compile Include="Base\UnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CountryRepository.cs" />
+    <Compile Include="Repositories\PaquetesRepository.cs" />
+    <Compile Include="Repositories\PersonRepository.cs" />
     <Compile Include="SampleArchContext.cs" />
   </ItemGroup>
   <ItemGroup>
